# defuddle

./: .gitignore  AGENTS.md  CLAUDE.md  PR_EXPLANATIONS.md  PR_IMPLEMENTATION.md  README.md  defuddle.code-workspace  defuddle.config.json  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.declarations.json  tsconfig.json  tsconfig.node.json  vitest.config.ts  webpack.config.js
.context/: github-pr.html
.github/: copilot-instructions.md
clients/python/: README.md  pyproject.toml
clients/python/src/defuddle/: __init__.py  client.py  exceptions.py  models.py
clients/python/tests/: test_client.py
playground/: index.html
scripts/: check-bundle-size.mjs  check-no-innerhtml.mjs  scrub-readability-fixture-text.ts
src/: cli.ts  constants.ts  content-boundary.ts  date-utils.ts  defuddle.ts  extractor-registry.ts  extractor.ts  fetch.ts  frontmatter.ts  index.full.ts  index.markdown.ts  index.ts  keyword-tags.ts  linkedom.ts  markdown.ts  math.ts  metadata.ts  node.ts  scoring.ts  standardize.ts  types.ts  utils.ts
tests/: ad-removal.test.ts  bilibili-transcript.test.ts  cli.test.ts  conversation-linkedom.test.ts  debug.test.ts  extractor-xss.test.ts  fetch.test.ts  fixtures.test.ts  full-bundle.test.ts  helpers.ts  image-dedup-generic-alt.test.ts  issues-321-tags-section.test.ts  keyword-tags.test.ts  lilian-thinking.test.ts  linkedom.test.ts  markdown-figures.test.ts  markdown.test.ts  media-removal.test.ts  no-mutate-live-doc.test.ts  openai-chatkit.test.ts  parse-date-text.test.ts  perf-compare.ts  perf.test.ts  readability-port-notes.md  (+16 more)
(+271 files in other folders)
